posiGen_FullsendBox/src/objects/Lease__c.object
<CustomObject>
    <fields>
        <fullName>Primary_Applicant_Last_Name__c</fullName>
        <label>Primary Applicant Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_Middle_Name__c</fullName>
        <label>Primary Applicant Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Applicant_SSN__c</fullName>
        <label>Primary Applicant SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Telephone_Type__c</fullName>
        <label>Primary Telephone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Principal_Balance_0531__c</fullName>
        <formula>FA_Original_Loan_Amount__c - Total_Cash_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Balance 0531</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Outstanding__c</fullName>
        <formula>Prinicpal_Current_Due_0531__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Principal Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Past_Due_0531__c</fullName>
        <label>Principal Past Due 0531</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Principal_Past_Due__c</fullName>
        <label>Principal Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prinicpal_Current_Due_0531__c</fullName>
        <label>Prinicpal Current Due 0531</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Cash_Grant_in_Dollars__c</fullName>
        <label>Projected Cash Grant in Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_ITC__c</fullName>
        <formula>Gross_System_Cost_in_Dollars__c * 0.3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected ITC in $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Property_Classification__c</fullName>
        <label>Property Classification</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RETC_Amount__c</fullName>
        <label>RETC Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RETC_Due_Date__c</fullName>
        <label>RETC Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rebate_Reservation_Number__c</fullName>
        <label>Rebate Reservation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rem_Term_Based_on_Unbill_div_Mon_Payment__c</fullName>
        <formula>Unbilled_Lease_Balance_F__c /  Monthly_Payment_Base_EE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rem Term Based on Unbill div Mon Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Payments__c</fullName>
        <formula>LD_Lease__r.Remaining_Pmts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rental_Amount_Outstanding_Including_Sale__c</fullName>
        <formula>Principal_Outstanding__c  * Rental_Monthly_Payment__c /  Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rental Amount Outstanding Including Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Monthly_Payment__c</fullName>
        <formula>Monthly_Payment__c -  EE_Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rental Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <label>Sales Tax Rate(%)</label>
        <picklist>
            <picklistValues>
                <fullName>8.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Telephone_Type__c</fullName>
        <label>Secondary Telephone Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Invoice__c</fullName>
        <formula>&apos;Y&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Reporting_Bucket__c</fullName>
        <label>Special Reporting Bucket</label>
        <picklist>
            <picklistValues>
                <fullName>Aged Never Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suspense__c</fullName>
        <formula>LD_Lease__r.Suspense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suspense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Size_in_DC_Watts__c</fullName>
        <label>System Size in DC Watts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination__c</fullName>
        <formula>LD_Lease__r.Termination__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Termination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cash_Received__c</fullName>
        <formula>Cash_Recd_0531__c +  Non_Cash_Recd_0531__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cash Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Late_Fees__c</fullName>
        <formula>LD_Lease__r.Total_Late_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Late Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Outstanding_Amount_Due__c</fullName>
        <formula>LD_Lease__r.Total_Curr_Recv__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outstanding Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Past_Due__c</fullName>
        <formula>LD_Lease__r.Total_Past_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Past Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled_Lease_Balance_F__c</fullName>
        <formula>Num_of_Unbilled_Payments_as_of_0531__c* Monthly_Payment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unbilled Lease Balance F</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbilled_Lease_Balance__c</fullName>
        <label>Unbilled Lease Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Upload_to_FA_On_Date__c</fullName>
        <label>Upload to FA On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upload_to_SF_Notes__c</fullName>
        <label>Upload to SF Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>This is the Vendor (System Manufacturer) from the Opportunity.</description>
        <inlineHelpText>This is the Vendor (System Manufacturer) from the Opportunity.</inlineHelpText>
        <label>Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WDTrackerID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>GG Number on matching WDTracker Record</inlineHelpText>
        <label>WDTrackerID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Months_Deferred__c</fullName>
        <label># of Months Deferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Lease</label>
    <listViews>
        <fullName>All_LD_Leases</fullName>
        <columns>Boarding_Status__c</columns>
        <columns>NAME</columns>
        <columns>LMS_Account_Number__c</columns>
        <columns>PVI_Net_Meter_Install_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Count_of_Leases_on_Related_Opp__c</columns>
        <columns>Lease_Term__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Loan_Class_1__c</columns>
        <columns>Monthly_Payment__c</columns>
        <columns>EE_Monthly_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All LD Leases to Board</label>
    </listViews>
    <listViews>
        <fullName>All_LD_Leases_to_Board_with_Wrong_Terms</fullName>
        <columns>Boarding_Status__c</columns>
        <columns>LMS_Account_Number__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Count_of_Leases_on_Related_Opp__c</columns>
        <columns>FA_Original_Loan_Amount__c</columns>
        <columns>Monthly_Payment__c</columns>
        <columns>EE_Monthly_Payment__c</columns>
        <columns>Lease_Term__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Loan_Class_1__c</columns>
        <columns>Primary_Applicant_First_Name__c</columns>
        <columns>Primary_Applicant_Last_Name__c</columns>
        <columns>Next_Principal_Billing_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Boarding_Status__c</field>
            <operation>equals</operation>
            <value>Upload to LD (based on CAO File)</value>
        </filters>
        <filters>
            <field>Lease_Term__c</field>
            <operation>notEqual</operation>
            <value>100</value>
        </filters>
        <filters>
            <field>Lease_Term__c</field>
            <operation>notEqual</operation>
            <value>120</value>
        </filters>
        <filters>
            <field>Lease_Term__c</field>
            <operation>notEqual</operation>
            <value>180</value>
        </filters>
        <label>All LD Leases to Board with Wrong Terms</label>
    </listViews>
    <listViews>
        <fullName>All_Non_Uptown_Leases</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Count_of_Leases_on_Related_Opp__c</columns>
        <columns>FA_Original_Loan_Amount__c</columns>
        <columns>Monthly_Payment__c</columns>
        <columns>Lease_Term__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Applicant_First_Name__c</columns>
        <columns>Primary_Applicant_Last_Name__c</columns>
        <columns>Next_Principal_Billing_Date__c</columns>
        <columns>Loan_Class_1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loan_Class_1__c</field>
            <operation>notEqual</operation>
            <value>UPTOWN</value>
        </filters>
        <label>All Non-Uptown Leases</label>
    </listViews>
    <listViews>
        <fullName>All_Non_Uptown_Leases1</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Count_of_Leases_on_Related_Opp__c</columns>
        <columns>FA_Original_Loan_Amount__c</columns>
        <columns>Monthly_Payment__c</columns>
        <columns>Lease_Term__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Applicant_First_Name__c</columns>
        <columns>Primary_Applicant_Last_Name__c</columns>
        <columns>Next_Principal_Billing_Date__c</columns>
        <columns>Loan_Class_1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loan_Class_1__c</field>
            <operation>notEqual</operation>
            <value>UPTOWN</value>
        </filters>
        <label>All Non-Uptown Leases</label>
    </listViews>
    <listViews>
        <fullName>All_Uptown_Leases</fullName>
        <columns>NAME</columns>
        <columns>LMS_Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>Installation_Street_Address__c</columns>
        <columns>Primary_Applicant_First_Name__c</columns>
        <columns>Primary_Applicant_Last_Name__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Count_of_Leases_on_Related_Opp__c</columns>
        <columns>FA_Original_Loan_Amount__c</columns>
        <columns>Monthly_Payment__c</columns>
        <columns>Lease_Term__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Next_Principal_Billing_Date__c</columns>
        <columns>Loan_Class_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loan_Class_1__c</field>
            <operation>equals</operation>
            <value>UPTOWN</value>
        </filters>
        <label>All Uptown Leases</label>
    </listViews>
    <listViews>
        <fullName>Exeption_Missing_Opportunity</fullName>
        <columns>NAME</columns>
        <columns>Loan_Class_1__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Primary_Applicant_First_Name__c</columns>
        <columns>Primary_Applicant_Last_Name__c</columns>
        <columns>Billing_Street__c</columns>
        <columns>Billing_State__c</columns>
        <columns>FA_Original_Loan_Amount__c</columns>
        <columns>Lease_Term__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Next_Principal_Billing_Date__c</columns>
        <columns>Monthly_Payment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Opportunity__c</field>
            <operation>equals</operation>
        </filters>
        <label>Exeption: Missing Opportunity</label>
    </listViews>
    <listViews>
        <fullName>Leases_Missing_Accounts</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Primary_Applicant_First_Name__c</columns>
        <columns>Primary_Applicant_Last_Name__c</columns>
        <columns>Billing_Street__c</columns>
        <columns>Billing_City__c</columns>
        <columns>FA_Original_Loan_Amount__c</columns>
        <columns>Monthly_Payment__c</columns>
        <columns>Lease_Term__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Next_Principal_Billing_Date__c</columns>
        <columns>Loan_Class_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>equals</operation>
        </filters>
        <label>Leases Missing Accounts</label>
    </listViews>
    <listViews>
        <fullName>Leases_Missing_Term</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Count_of_Leases_on_Related_Opp__c</columns>
        <columns>FA_Original_Loan_Amount__c</columns>
        <columns>Lease_Term__c</columns>
        <columns>Monthly_Payment__c</columns>
        <columns>Lease_Start_Date__c</columns>
        <columns>Maturity_Date__c</columns>
        <columns>Primary_Applicant_First_Name__c</columns>
        <columns>Primary_Applicant_Last_Name__c</columns>
        <columns>Next_Principal_Billing_Date__c</columns>
        <columns>Loan_Class_1__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Loan_Class_1__c</field>
            <operation>notEqual</operation>
            <value>UPTOWN</value>
        </filters>
        <filters>
            <field>Lease_Term__c</field>
            <operation>equals</operation>
        </filters>
        <label>Leases Missing Term</label>
    </listViews>
    <listViews>
        <fullName>Past_Due_Leases</fullName>
        <columns>Loan_Class_1__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Days_Past_Due__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>NAME</columns>
        <columns>Primary_Applicant_First_Name__c</columns>
        <columns>Primary_Applicant_Last_Name__c</columns>
        <columns>Late_Charges_Balance__c</columns>
        <columns>Principal_Past_Due__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Days_Past_Due__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Past Due Leases</label>
    </listViews>
    <nameField>
        <label>Loan Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>